--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,5 @@
-<div>
+<div class='jumbotron'>
   <h1>The Startlist</h1>
+  <p>An international team of elite startup analysts...</p>
+  <p>or just Jon and Ean</p>
 </div>
