--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,26 @@
 <div class='jumbotron'>
   <h1>The Startlist</h1>
+  <h1>
+    <%= Time.now.strftime("%m/%d/%Y") %>
+  </h1>
+</div>
+<div class='post'>
+  <h1>StoAmigo</h1>
+  <p>A dive into the deep</p>
+</div>
+<div class='post'>
+  <h1>HakHub</h1>
+  <p>A super blog</p>
+</div>
+<div class='post'>
+  <h1>One Month</h1>
+  <p>Front End Class</p>
+</div>
+<div class='post'>
+  <h1>Twitter</h1>
+  <p>IPO</p>
+</div>
+<div class='post'>
+  <h1>Franklin</h1>
+  <p>A new kind of day planner</p>
 </div>
