--- a/app/assets/stylesheets/overrides.css.scss
+++ b/app/assets/stylesheets/overrides.css.scss
@@ -3,3 +3,25 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 @import "bootstrap";
+
+.jumbotron {
+  margin-top: 100px;
+  border: 10px solid black;
+  border-radius: 0px !important;
+}
+
+.navbar {
+  background-color: white;
+  border: 10px solid black;
+  border-radius: 0px !important;
+}
+
+.post {
+  margin-top: 0px !important;
+  border-top: 0px solid black;
+  border-right: 20px solid black;
+  border-left: 0px solid black;
+  border-bottom: 1px solid black;
+
+  width: 100%;
+}
