--- a/app/assets/stylesheets/overrides.css.scss
+++ b/app/assets/stylesheets/overrides.css.scss
@@ -4,6 +4,10 @@
 
 @import "bootstrap";
 
+body {
+  padding-bottom: 100px;
+}
+
 .jumbotron {
   margin-top: 100px;
   border: 10px solid black;
@@ -12,15 +16,49 @@
 
 .navbar {
   background-color: white;
-  border: 10px solid black;
-  border-radius: 0px !important;
+  border-top: 10px solid black;
+  border-right: 0px solid black;
+  border-left: 0px solid black;
+  border-bottom: 10px solid black;  border-radius: 0px !important;
 }
 
-.post {
+.post1 {
   margin-top: 0px !important;
-  border-top: 0px solid black;
-  border-right: 20px solid black;
-  border-left: 0px solid black;
-  border-bottom: 1px solid black;
+  border-top: 0px solid #000000;
+  border-right: 20px solid #000000;
+  border-left: 0px solid #000000;
+  border-bottom: 1px solid #000000;
+  width: 100%;
+}
+.post2 {
+  margin-top: 0px !important;
+  border-top: 0px solid #B40431;
+  border-right: 20px solid #B40431;
+  border-left: 0px solid #B40431;
+  border-bottom: 1px solid #B40431;
+  width: 100%;
+}
+.post3 {
+  margin-top: 0px !important;
+  border-top: 0px solid #0404B4;
+  border-right: 20px solid #0404B4;
+  border-left: 0px solid #0404B4;
+  border-bottom: 1px solid #0404B4;
+  width: 100%;
+}
+.post4 {
+  margin-top: 0px !important;
+  border-top: 0px solid #088A08;
+  border-right: 20px solid #088A08;
+  border-left: 0px solid #088A08;
+  border-bottom: 1px solid #088A08;
+  width: 100%;
+}
+.post5 {
+  margin-top: 0px !important;
+  border-top: 0px solid #AEB404;
+  border-right: 20px solid #AEB404;
+  border-left: 0px solid #AEB404;
+  border-bottom: 1px solid #AEB404;
   width: 100%;
 }
