--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,22 +5,22 @@
   </h1>
 </div>
 <div class='post1'>
-  <h1>StoAmigo</h1>
-  <p>A dive into the deep</p>
+  <h1>A solution to procrastination?</h1>
+  <p>There is something you wish to achieve. </p>
 </div>
 <div class='post2'>
-  <h1>HakHub</h1>
-  <p>A super blog</p>
+  <h1>CIVILIZED AGE </h1>
+  <p>An elegant profile.</p>
 </div>
 <div class='post3'>
-  <h1>One Month</h1>
-  <p>Front End Class</p>
+  <h1>ONE CMS, MANY RESOURCES </h1>
+  <p>The Story of Novus OS</p>
 </div>
 <div class='post4'>
-  <h1>Twitter</h1>
-  <p>IPO</p>
+  <h1>watson</h1>
+  <p>Create issues while you code </p>
 </div>
 <div class='post5'>
-  <h1>Franklin</h1>
-  <p>A new kind of day planner</p>
+  <h1>Meteor on campus: Y-Hack </h1>
+  <p>Meanwhile, Alexey Komissarouk presented Meteor at HackPrinceton to 350 students. </p>
 </div>
