delete 'about' add 'blog'

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
         <li>
-        <%= link_to "ABOUT", pages_about_path %>
+        <%= link_to "Blog", pages_about_path %>
       </li> 
     </ul>
   </div><!-- /.navbar-collapse -->
