--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,23 +4,29 @@
     <%= Time.now.strftime("%m/%d/%Y") %>
   </h1>
 </div>
+<a href="https://www.popuparchive.org/">
 <div class='post1'>
-  <h1>A solution to procrastination?</h1>
-  <p>There is something you wish to achieve. </p>
+  <h1>Pop Up Archive</h1>
+  <p>Focus on the Story. </p>
 </div>
+</a>
+<a href="http://www.indiegogo.com/projects/dungeon-gaming-cms">
 <div class='post2'>
-  <h1>CIVILIZED AGE </h1>
-  <p>An elegant profile.</p>
+  <h1>Dungeon CRM</h1>
+  <p>A CRM for gamers</p>
 </div>
+<a href="http://lumberjack.ultrab0t.net/channels">
 <div class='post3'>
-  <h1>ONE CMS, MANY RESOURCES </h1>
-  <p>The Story of Novus OS</p>
+  <h1>Lumnberjack </h1>
+  <p>A logging module</p>
 </div>
+<a href="http://www.sencept.com/">
 <div class='post4'>
-  <h1>watson</h1>
-  <p>Create issues while you code </p>
+  <h1>Sencept</h1>
+  <p>A new kind of search engine</p>
 </div>
+<a href="http://protocoin.readthedocs.org/en/v0.1/">
 <div class='post5'>
-  <h1>Meteor on campus: Y-Hack </h1>
-  <p>Meanwhile, Alexey Komissarouk presented Meteor at HackPrinceton to 350 students. </p>
+  <h1>Protocoin </h1>
+  <p>A bitcoin protocol</p>
 </div>
