--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,14 +17,11 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li>
-        <%= link_to 'NEW', posts_path, class: "nav-links" %>
+        <%= link_to 'MASTERLIST', posts_path, class: "nav-links" %>
       </li>
       <li>
         <%= link_to 'SUBMIT', new_post_path, class: "nav-links" %>
       </li>
-      <li>
-        <%= link_to "ABOUT", pages_about_path %>
-      </li> 
     </ul>
   </div><!-- /.navbar-collapse -->
 </nav>
