--- a/app/assets/stylesheets/overrides.css.scss
+++ b/app/assets/stylesheets/overrides.css.scss
@@ -106,4 +106,12 @@ a p {
   background: #D8D8D8;
 }
 
+.form-control:focus {
+  border: 3px solid white !important;
+  background: url(http://www.hdwallpapersinn.com/wp-content/uploads/2013/04/icy-mountain.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  color:gold;
+}
 
