--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -14,7 +14,7 @@
   <div class="panel panel-default">
 
     <div class="panel-heading">
-      <h2>Add Project Details</h2>
+      <h2>Startup Submission</h2>
     </div>
 
     <ul class="list-group">
