--- a/app/assets/stylesheets/overrides.css.scss
+++ b/app/assets/stylesheets/overrides.css.scss
@@ -3,9 +3,18 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 @import "bootstrap";
-
 body {
   padding-bottom: 100px;
+}
+
+.navbar-default .navbar-brand {
+color: black;
+font-size: 30px;
+}
+
+.navbar-default .navbar-nav > li > a {
+color: black;
+font-weight: bolder;
 }
 
 a:hover,
@@ -108,7 +117,6 @@ a p {
 
 .form-control:focus {
   border: 3px solid white !important;
-  background: url(http://www.hdwallpapersinn.com/wp-content/uploads/2013/04/icy-mountain.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
