update index and upvote button

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,30 +3,30 @@
   <h1>
     <%= Time.now.strftime("%m/%d/%Y") %>
   </h1>
-</div>
+</div> <!-- jumbotron -->
 <a href="https://www.popuparchive.org/">
 <div class='post1'>
   <h1>Pop Up Archive</h1>
   <p>Focus on the Story. </p>
-</div>
+</div> <!-- post1 -->
 </a>
 <a href="http://www.indiegogo.com/projects/dungeon-gaming-cms">
 <div class='post2'>
   <h1>Dungeon CRM</h1>
   <p>A CRM for gamers</p>
-</div>
+</div> <!-- post2 -->
 <a href="http://lumberjack.ultrab0t.net/channels">
 <div class='post3'>
   <h1>Lumnberjack </h1>
   <p>A logging module</p>
-</div>
+</div> <!-- post3 -->
 <a href="http://www.sencept.com/">
 <div class='post4'>
   <h1>Sencept</h1>
   <p>A new kind of search engine</p>
-</div>
+</div> <!-- post4 -->
 <a href="http://protocoin.readthedocs.org/en/v0.1/">
 <div class='post5'>
   <h1>Protocoin </h1>
   <p>A bitcoin protocol</p>
-</div>
+</div> <!-- post5 -->
