--- a/app/assets/stylesheets/overrides.css.scss
+++ b/app/assets/stylesheets/overrides.css.scss
@@ -87,13 +87,44 @@ a p {
   width: 100%;
 }
 
+.postg {
+  margin: 10px !important;
+  border-top: 10px solid black;
+  border-right: 10px solid black;
+  border-left: 10px solid black;
+  border-bottom: 10px solid black;
+  padding: 10px;
+}
+
+.postg:hover {
+  background-color:#F78181;
+}
+
+.vote {
+  width: 50px;
+  height:50px;
+  margin: 15px;
+  border-left: 4px solid black;
+  border-bottom: 4px solid black;
+  border-right: 40px solid transparent;
+  border-top: 40px solid transparent;
+  transform: rotate(135deg);
+  -ms-transform: rotate(135deg); /* IE 9 */
+  -webkit-transform: rotate(135deg); /* Safari and Chrome */
+}
+
+.vote:hover {
+  border-left: 4px solid white;
+  border-bottom: 4px solid white;
+}
+
 .panel-default {
   border-radius: 0px;
   border: 10px solid black;
   width: 50%;
   margin: auto;
   margin-top: 50px;
-
+  clear: both;
 }
 
 .panel-heading {
@@ -120,6 +151,6 @@ a p {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  color:gold;
+  color:black;
 }
 
