add submit button on home

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,6 +3,7 @@
   <h1>
     <%= Time.now.strftime("%m/%d/%Y") %>
   </h1>
+  <p><%= link_to "New Submission", new_post_path, class: "btn btn-default btn-large pull-right btn-j" %></p>
 </div> <!-- jumbotron -->
 <a href="https://www.popuparchive.org/">
 <div class='post1'>
