--- a/app/assets/stylesheets/overrides.css.scss
+++ b/app/assets/stylesheets/overrides.css.scss
@@ -38,6 +38,12 @@ a p {
   border-radius: 0px !important;
 }
 
+.btn-j {
+  margin: 10px;
+  padding: 20px;
+  font-size: 30px;
+}
+
 .navbar {
   background-color: white;
   border-top: 0px solid black;
@@ -154,3 +160,6 @@ a p {
   color:black;
 }
 
+.test {
+  border: 1px solid black
+}
