--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li>
-        <%= link_to 'MASTERLIST', posts_path, class: "nav-links" %>
+        <%= link_to 'NEW', posts_path, class: "nav-links" %>
       </li>
       <li>
         <%= link_to 'SUBMIT', new_post_path, class: "nav-links" %>
