--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,9 @@
 <div class='jumbotron'>
-  <h1>The Startlist</h1>
-  <h1>
-    <%= Time.now.strftime("%m/%d/%Y") %>
-  </h1>
-  <p><%= link_to "New Submission", new_post_path, class: "btn btn-default btn-large pull-right btn-j" %></p>
+  <div class="row">
+    <div class="col-md-7"><h1>The Startlist</h1></div>
+    <div class="col-md-5"><%= render 'layouts/signupform' %></div>
+    <h1><%= Time.now.strftime("%m/%d/%Y") %></h1>
+  </div>
 </div> <!-- jumbotron -->
 <a href="https://www.popuparchive.org/">
 <div class='post1'>
